// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component Snapshots matches snapshot for disabled state 1`] = `
<RCTPressable
  accessibilityLabel="Disabled"
  accessibilityRole="button"
  accessibilityState={
    {
      "disabled": true,
    }
  }
  accessible={true}
  aria-disabled={true}
  aria-label="Disabled"
  disabled={true}
  onPressIn={[Function]}
  onPressOut={[Function]}
  ref={null}
  role="button"
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#27272A",
        "borderRadius": 26,
        "height": 52,
        "opacity": 0.6,
        "paddingHorizontal": 24,
      },
      false,
      undefined,
    ]
  }
>
  <RCTView
    ref={null}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <RCTText
      ref={null}
      style={
        [
          {
            "accessibilityRole": "text",
            "color": "#F8FAFC",
            "fontSize": 15,
            "fontWeight": "600",
            "lineHeight": 22.5,
            "minContrastRatio": 4.5,
          },
          {
            "color": "#475569",
            "fontSize": 16,
          },
          undefined,
        ]
      }
      testID="RCTText"
    >
      Disabled
    </RCTText>
  </RCTView>
</RCTPressable>
`;

exports[`Button Component Snapshots matches snapshot for loading state 1`] = `
<RCTPressable
  accessibilityHint="Loading"
  accessibilityLabel="Loading"
  accessibilityRole="button"
  accessibilityState={
    {
      "disabled": true,
    }
  }
  accessible={true}
  aria-disabled={true}
  aria-label="Loading"
  disabled={true}
  onPressIn={[Function]}
  onPressOut={[Function]}
  ref={null}
  role="button"
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
      {
        "borderRadius": 26,
        "height": 52,
        "overflow": "hidden",
        "paddingHorizontal": 24,
      },
      false,
      undefined,
    ]
  }
>
  <View
    data-colors="["#FFD700","#FFA500"]"
    data-end="{"x":1,"y":0}"
    data-start="{"x":0,"y":0}"
    ref={null}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "height": "100%",
        "justifyContent": "center",
        "width": "100%",
      }
    }
    testID="linear-gradient"
  >
    <RCTView
      ref={null}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <RCTActivityIndicator
        color="#FFFFFF"
        ref={null}
        size="small"
        testID="RCTActivityIndicator"
      />
    </RCTView>
  </View>
</RCTPressable>
`;

exports[`Button Component Snapshots matches snapshot for primary variant 1`] = `
<RCTPressable
  accessibilityLabel="Primary"
  accessibilityRole="button"
  accessibilityState={
    {
      "disabled": false,
    }
  }
  accessible={true}
  aria-disabled={false}
  aria-label="Primary"
  disabled={false}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  ref={null}
  role="button"
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
      {
        "borderRadius": 26,
        "height": 52,
        "overflow": "hidden",
        "paddingHorizontal": 24,
      },
      false,
      undefined,
    ]
  }
>
  <View
    data-colors="["#FFD700","#FFA500"]"
    data-end="{"x":1,"y":0}"
    data-start="{"x":0,"y":0}"
    ref={null}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "height": "100%",
        "justifyContent": "center",
        "width": "100%",
      }
    }
    testID="linear-gradient"
  >
    <RCTView
      ref={null}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <RCTText
        ref={null}
        style={
          [
            {
              "accessibilityRole": "text",
              "color": "#F8FAFC",
              "fontSize": 15,
              "fontWeight": "600",
              "lineHeight": 22.5,
              "minContrastRatio": 4.5,
            },
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            undefined,
          ]
        }
        testID="RCTText"
      >
        Primary
      </RCTText>
    </RCTView>
  </View>
</RCTPressable>
`;
